--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -62,7 +62,7 @@
 .i-logout:active {
   color: white !important;
 }
-@media all and (max-width : 320px) {
+/* @media all and (min-width : 320px) {
 .imageLogo{
   height: 43px !important;
   width: 250px;
@@ -78,12 +78,12 @@
 .showLogin{
   margin-right: -auto !important;
 }
-/* Button Create Tidak Muncul */
 
-}
-@media only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+} */
+/* @media only screen and (min-device-width: 480px){
 	.imageLogo{
-		height: 60px;
+    height: 60px;
+    margin-left: -45px !important;
 	}
 	.navbar-nav{
 		padding-bottom: 5px;
@@ -91,7 +91,7 @@
 	.signInButton{
 		margin-left: 150px;
 		margin-top: 10px;
-	}
+  }
 	.signButton {
 		margin-right: 170px;
 	}
@@ -118,8 +118,8 @@
     .navProfile{
       margin-left: 160px;
     }
-  }
-  @media all and (max-width: 900px) {
+  } */
+  /* @media all and (min-width: 900px) {
     .imageLogo{
       height: 70px;
       margin-top:-20px
@@ -134,5 +134,5 @@
     .navProfile{
       margin-left: 200px;
     }
-  }
+  } */
  
