--- a/src/pages/Create_Event/EventCreate.css
+++ b/src/pages/Create_Event/EventCreate.css
@@ -41,7 +41,7 @@
 .containerCreate {
   border: 1px solid #ff001f !important;
 }
-@media all and (max-width:320px) {
+/* @media all and (min-width:320px) {
   .containerCreate{
     width: 300px !important;
     margin-left: 10px;
@@ -49,4 +49,4 @@
   .descText{
     width: 230px !important;
   }
-}
+} */
