--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -28,9 +28,9 @@ body {
 .card-body {
 	background-color: #e3e3e3;
 }
-.contQuotes{
+/* .contQuotes{
 	margin-top: 100px !important;
-}
+} */
 .buttonSearch {
 	border-radius: 20rem !important;
 }
