--- a/src/pages/Create_Event/EventCreate.css
+++ b/src/pages/Create_Event/EventCreate.css
@@ -26,6 +26,13 @@
   color: white !important;
   padding: 0.4rem;
 }
+
+.imageShow {
+  margin: 10px 0;
+  width: 200px;
+  height: 200px;
+}
+
 .save {
   background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
   border-color: #ff001f !important;
