--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -42,6 +42,11 @@ body {
 .buttonSearch {
   border-radius: 20rem !important;
 }
+
+.search-icon {
+  margin-left: 17rem !important;
+}
+
 .main-background {
   background: url(./../../../image/backgroundhome.jpg) no-repeat;
   position: relative;
@@ -59,6 +64,7 @@ body {
   width: 35rem !important;
   padding: 1.7rem 4rem !important;
   border-radius: 20rem !important;
+  margin: -1rem -17rem !important;
 }
 .mainInput:focus {
   border-color: #ff001f !important;
