--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -29,8 +29,7 @@
 }
 
 .footerNav:hover {
-  color: black !important;
+  color: #cbcbcb !important;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  
 }
