--- a/src/pages/Home/Trend/Trend.css
+++ b/src/pages/Home/Trend/Trend.css
@@ -1,45 +1,45 @@
 .trend-background {
-	background: url(./../../../image/background2.jpg) no-repeat;
-	position: relative;
-	background-size: cover;
-	background-position: center;
-	padding: 6rem !important;
+  background: url(./../../../image/background2.jpg) no-repeat;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  padding: 6rem !important;
 }
 
 .trend-background h1 {
-	color: white;
-	background-color: black;
-	padding: 1rem !important;
-	margin: 0 20rem;
+  color: white;
+  background-color: black;
+  padding: 1rem !important;
+  margin: 1rem 18rem !important;
 }
 
 .hostEvent {
-	background: rgba(0, 0, 0, 0) !important;
+  background: rgba(0, 0, 0, 0) !important;
 }
 
 .buttonCreate.mx-auto {
-	background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
-	border-color: #ff001f !important;
-	width: 12rem;
-	font-size: 1.5rem !important;
-	margin-left: 450px !important;
+  background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
+  border-color: #ff001f !important;
+  width: 12rem;
+  font-size: 1.5rem !important;
+  margin-left: 450px !important;
 }
 
 .underlineTrend {
-	width: 365px;
-	height: 2px;
-	background-color: #ff001f;
+  width: 365px;
+  height: 2px;
+  background-color: #ff001f;
 }
 .trendCard {
-	box-shadow: 0 5px 5px -2px gray;
-	transform: scale(1);
-	margin: 5px;
+  box-shadow: 0 5px 5px -2px gray;
+  transform: scale(1);
+  margin: 5px;
 }
 .trendCard:hover {
-	box-shadow: 2px 2px 20px #c4c4c4;
-	transition: transform 0.5s ease;
-	transform: scale(1.1);
-	z-index: 1;
+  box-shadow: 2px 2px 20px #c4c4c4;
+  transition: transform 0.5s ease;
+  transform: scale(1.1);
+  z-index: 1;
 }
 /* @media all and (min-width:320px){
 	.card-deck{
