alert for edit Profile

--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -66,10 +66,16 @@ body {
   border-radius: 20rem !important;
   margin: -1rem -17rem !important;
 }
+
+input.mainInput {
+  background-color: white !important;
+}
+
 .mainInput:focus {
   border-color: #ff001f !important;
   box-shadow: #ff001f !important;
 }
+
 /* .mainSearch {
   border: none !important;
   color: #ff001f !important;
