--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -39,20 +39,22 @@
   background-color: #ff001f !important;
 }
 
-.profileSetting {
-  color: black !;
-  text-decoration: none !important;
-}
-
 .historyButton {
   color: black !;
   text-decoration: none !important;
 }
-.profileSetting{
-  color: black;
+
+.profileSetting {
+  color: black ;
+  text-decoration: none !important;
 }
+
 .profileSetting:hover {
   color: black !important;
+}
+
+.profileSetting:active{
+  color: white !important;
 }
 
 .historyButton:hover {
