--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -65,6 +65,7 @@
   padding: 1.7rem 4rem !important;
   border-radius: 20rem !important;
   margin: -1rem -17rem !important;
+  border : 1px solid #ff001f !important
 }
 input.searchNav2{
   background-color: white !important;
