--- a/src/pages/Detail/Detail.css
+++ b/src/pages/Detail/Detail.css
@@ -1,5 +1,6 @@
 .detailCardImage{
     height: 400px !important;
+    object-fit: cover;
 }
 /* @media all and (min-width: 769px) {
     .detailCardImage{
