--- a/src/pages/Form/Register/Register.css
+++ b/src/pages/Form/Register/Register.css
@@ -12,9 +12,20 @@
   align-items: center;
   flex-direction: column;
   font-family: "Montserrat", sans-serif;
-  height: 60vh;
+  height: 70vh;
   margin: 60px 50px;
   width: 50rem;
+}
+
+.container-register {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 580px;
 }
 
 .container-register h1 {
@@ -85,19 +96,13 @@
   width: 100%;
 }
 
-.input {
-  border: 1px solid grey;
+.register-input:focus {
+  border-color: #ff001f !important;
+  box-shadow: #ff001f !important;
 }
 
-.container-register {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  position: relative;
-  overflow: hidden;
-  width: 768px;
-  max-width: 100%;
-  min-height: 580px;
+.input {
+  border: 1px solid grey;
 }
 
 .form-container {
