--- a/src/pages/Detail/Detail.css
+++ b/src/pages/Detail/Detail.css
@@ -3,6 +3,18 @@
     object-fit: cover;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input.phone::-webkit-outer-spin-button,
+input.phone::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input.phone[type=number] {
+  -moz-appearance: textfield;
+}
+
 /* @media all and (min-width: 769px) {
     .detailCardImage{
         width: 560px !important;
