--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -82,3 +82,15 @@
     width: 550px !important;
   }
 }
+
+/* Chrome, Safari, Edge, Opera */
+input.phone::-webkit-outer-spin-button,
+input.phone::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input.phone[type=number] {
+  -moz-appearance: textfield;
+}
