--- a/src/pages/Home/Category/Category.css
+++ b/src/pages/Home/Category/Category.css
@@ -28,6 +28,7 @@
 	background-color: #ff4b2b !important;
 	border-color: #ff4b2b !important;
 	font-size: 20px !important;
+	border-radius: 0 0 1rem 1rem !important;
 }
 /* @media all and (min-width: 320px){
 	.carouselImg{
