--- a/src/pages/Create_Event/EventCreate.css
+++ b/src/pages/Create_Event/EventCreate.css
@@ -33,6 +33,11 @@
   height: 200px;
 }
 
+img.imagePreview{
+  width: 100%;
+  height: 100%;
+}
+
 .save {
   background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
   border-color: #ff001f !important;
