--- a/src/pages/Detail/Detail.css
+++ b/src/pages/Detail/Detail.css
@@ -1,7 +1,14 @@
 .detailCardImage{
     height: 400px !important;
+    width: 100%;
     object-fit: cover;
 }
+
+img.imagePreview{
+    width: 100%;
+    height: 100%;
+}
+
 
 /* Chrome, Safari, Edge, Opera */
 input.phone::-webkit-outer-spin-button,
