--- a/src/pages/Home/Category/Category.css
+++ b/src/pages/Home/Category/Category.css
@@ -2,6 +2,7 @@
 	height: 200px;
 	width: 350px;
 	border-radius: 1rem 1rem 0 0 !important;
+	cursor: grab;
 }
 .BrainhubCarousel__arrowRight {
 	background-color: #ff4b2b;
