--- a/src/pages/Home/Trend/Trend.css
+++ b/src/pages/Home/Trend/Trend.css
@@ -12,6 +12,11 @@
   padding: 1rem !important;
   margin: 1rem 22rem !important;
 }
+
+.hostEvent {
+  background: rgba(0, 0, 0, 0) !important;
+}
+
 .buttonCreate.mx-auto {
   background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
   border-color: #ff001f !important;
@@ -49,8 +54,8 @@
 		margin-left: -75px !important;
 	}
 	.hostEvent{
-		margin-right: -50% !important;
-		font-size: 50px;
+		margin-left: 40px !important;
+		font-size: 60px;
 	}
 }
 @media all and (max-width: 480px){
