--- a/src/pages/Create_Event/EventCreate.css
+++ b/src/pages/Create_Event/EventCreate.css
@@ -53,15 +53,16 @@ img.imagePreview{
 .containerCreate {
   border: 1px solid #ff001f !important;
 }
-/* @media all and (min-width:320px) {
+@media all and (max-width:321px) {
   .containerCreate{
+    margin-top: 100px;
     width: 300px !important;
     margin-left: 10px;
   }
   .descText{
     width: 230px !important;
   }
-} */
+}
 .smallCreate{
   font-size: 12px;
   color:rgb(70, 67, 67);
