--- a/src/pages/Home/Trend/Trend.css
+++ b/src/pages/Home/Trend/Trend.css
@@ -41,25 +41,14 @@
   transform: scale(1.1);
   z-index: 1;
 }
-/* 	
-@media all and (max-width:320px){
-	.trend-background h2{
-		margin-top: 4rem;
-		margin-left: -1rem !important;
-	}
-
-	.card-deck{
-		margin-left: -40px !important;
-	}
-	.trendCard{
-		width: 300px !important;
-		margin-right: 	50px !important;
-	}
-	.containerHost{
-		margin-left: -75px !important;
-	}
-} */
-
+@media all and (max-width:321px){
+.hostEvent{
+	margin-right: 100px;
+}
+.buttonLink{
+	margin-right: 100px;
+}
+}
 @media all and (max-width : 460px) {
 	.trend-background {
 		width: 480px;
