--- a/src/pages/About/Team.css
+++ b/src/pages/About/Team.css
@@ -17,7 +17,7 @@
 
 .about-card-img {
 	margin-top: 4px;
-	width: 15rem;
+	width: 12rem !important;
 	height: 13rem;
 	margin-right: 1rem !important;
 	border-radius: 10rem !important;
@@ -33,98 +33,29 @@
 	box-shadow: 2px 2px 20px black;
 }
 
-.photo-grid {
-	margin: 1em 0em;
-	text-align: center;
-	background-color: #c4c4c4;
+@media all and (max-width : 575px) {
+	.about-card{
+		width: 28rem !important;	
+	}
 }
 
-.photo-grid .grid-item {
-	border: 5px solid white;
-	display: inline-block;
-	margin: 1em;
-	width: 20rem;
-	height: 190px;
+@media all and (max-width : 450px) {
+	.about-card{
+		width: 24rem !important;
+		text-align: center;
+	}
 }
 
-.photo-grid img {
-	display: block;
-	height: auto;
-	max-width: 100%;
+@media all and (max-width : 386px) {
+	.about-card{
+		width: 20rem !important;
+		text-align: center;
+	}
 }
 
-.photo-grid figure {
-	height: 180px;
-	overflow: hidden;
-	position: relative;
-	width: 100%;
-}
-
-.photo-grid figcaption {
-	background: rgba(0, 0, 0, 0.8);
-	color: white;
-	display: table;
-	height: 100%;
-	left: 0;
-	opacity: 0;
-	position: absolute;
-	right: 0;
-	top: 0;
-	z-index: 100;
-}
-
-.photo-grid figcaption p {
-	width: 30rem !important;
-	display: table-cell;
-	font-size: 1.5em;
-	position: relative;
-	top: -40px;
-	vertical-align: middle;
-}
-
-.photo-grid .grid-item:hover figcaption {
-	opacity: 1;
-}
-
-.photo-grid img {
-	display: block;
-	height: auto;
-	transition: all 300ms;
-	max-width: 100%;
-}
-
-.photo-grid .grid-item:hover img {
-	transform: scale(1.4);
-}
-
-.photo-grid figcaption p {
-	display: table-cell;
-	font-size: 1.5em;
-	position: relative;
-	top: -40px;
-	width: 200px;
-
-	transition: all 300ms ease-out;
-	vertical-align: middle;
-}
-
-.photo-grid .grid-item:hover figcaption p {
-	transform: translateY(40px);
-}
-
-.photo-grid figcaption {
-	background: rgba(0, 0, 0, 0.8);
-	color: white;
-	display: table;
-	height: 100%;
-	left: 0;
-	opacity: 0;
-	position: absolute;
-	right: 0;
-	top: 0;
-
-	transition: all 300ms;
-
-	transition-delay: 100ms;
-	z-index: 100;
+@media all and (max-width : 326px) {
+	.about-card{
+		width: 17rem !important;
+		text-align: center;
+	}
 }
