--- a/src/components/Navbar2/Navbar2.css
+++ b/src/components/Navbar2/Navbar2.css
@@ -1,86 +1,71 @@
-.navbar {
-    height: 5rem;
-    box-shadow: 2px 2px 20px #c4c4c4;
-  }
-  .signInButton {
-    color: white !important;
-    background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
-    border-color: #ff001f !important;
-    /* margin-left: 350px; */
-  }
-  .signInButton:hover {
-    background-color: rgba(255, 0, 31, 0.85) !important;
-  }
-  
-  .logout-button {
-    text-decoration: none !important;
-    font-size: 24px;
-    color: black;
-  }
-  
-  .logout-button:hover {
-    text-decoration: none !important;
-    font-size: 24px;
-    color: #ff001f;
-  }
-  .navbar-nav{
-    background-color: white !important;
-    border-radius: 0px 0px 10px 10px;
-  }
-  .navDropItem:active {
-    background-color: #ff001f !important;
-  }
-  
-  .historyButton {
-    color: black !;
-    text-decoration: none !important;
-  }
-  
-  .profileSetting {
-    color: black ;
-    text-decoration: none !important;
-  }
-  
-  .profileSetting:hover {
-    color: black !important;
-  }
-  
-  .profileSetting:active{
-    color: white !important;
-  }
-  
-  .historyButton:hover {
-    color: black !important;
-  }
-  
-  .i-logout:active {
-    color: white !important;
-  }
-  .searchNav{
-    margin-left: 220px;
-    width: 20px !important;
-  }
-  .searchNav2{
-    width: 20rem !important;
-    padding: 1.7rem 4rem !important;
-    border-radius: 20rem !important;
-    margin: -1rem -17rem !important;
-  }
-  input.searchNav2{
-    background-color: white !important;
-  }
-  .searchNav2:focus {
-    border-color: #ff001f !important;
-    box-shadow: #ff001f !important;
-  }
-  .iconSearchNav{
-    padding: 0.5rem;
-    margin-left: -2rem !important;
-    border-radius: 20rem !important;
-    font-size: 1.2rem;
-    color: #ff001f !important;
-  }
-  @media all and (max-width:321px){
+/* .navbar {
+  height: 5rem;
+  box-shadow: 2px 2px 20px #c4c4c4;
+}
+
+.imageLogo2 {
+  margin-left: 3rem !important;
+}
+
+.signInButton {
+  color: white !important;
+  background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
+  border-color: #ff001f !important;
+}
+
+.navbar-nav{
+  background-color: none !important;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.navDropItem:active {
+  background-color: #ff001f !important;
+}
+
+.profileSetting {
+  color: black ;
+  text-decoration: none !important;
+}
+
+.profileSetting:active{
+  color: white !important;
+}
+
+.i-logout:active {
+  color: white !important;
+}
+
+.searchNav{
+  margin-left: 220px;
+  width: 20px !important;
+}
+
+.searchNav2{
+  width: 20rem !important;
+  padding: 1.7rem 4rem !important;
+  border-radius: 20rem !important;
+  margin: -1rem -17rem !important;
+}
+
+input.searchNav2{
+  background-color: white !important;
+  margin-left: -10rem !important;
+}
+
+.searchNav2:focus {
+  border-color: #ff001f !important;
+  box-shadow: #ff001f !important;
+}
+.iconSearchNav{
+  padding: 0.5rem;
+  margin-left: -2rem !important;
+  border-radius: 20rem !important;
+  font-size: 1.2rem;
+  color: #ff001f !important;
+} */
+
+/*
+@media all and (max-width:321px){
     #createLink{
       display: none !important;
       visibility: hidden !important;
@@ -157,5 +142,4 @@
       .navProfile{
         margin-left: 200px;
       }
-    } 
-   
+    }  */
