--- a/src/pages/Home/Category/Category.css
+++ b/src/pages/Home/Category/Category.css
@@ -31,3 +31,21 @@
 	font-size: 20px !important;
 	border-radius: 0 0 1rem 1rem !important;
 }
+
+.BrainhubCarousel__dots .BrainhubCarousel__dot:before{
+	margin-top: 10px;
+}
+
+@media (max-width : 320px){
+	.carouselImg{
+		width: 280px !important;
+		height: 180px;
+	}
+}
+
+@media (max-width : 370px){
+	.carouselImg{
+		width: 300px;
+		height: 200px;
+	}
+}
