--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -38,6 +38,8 @@
   color: #ff001f;
 }
 .navbar-nav{
+  padding-right: 0;
+  padding-left: 20px !important;
   background-color: white !important;
   border-radius: 0px 0px 10px 10px;
 }
@@ -92,7 +94,10 @@ input.searchNav2{
   font-size: 1.2rem;
   color: #ff001f !important;
 }
-@media all and (max-width : 321px) {
+
+
+
+/* @media all and (max-width : 321px) {
   .fixed-top{
     height: 150px !important;
     display: inline-block !important;
@@ -236,11 +241,14 @@ input.searchNav2{
       height: 70px;
       margin-top:-20px
     }
-    .navbar-nav{
-      padding-bottom: 5px;
+    .navbar-nav {
+      height: 115px;
+      margin-left: 185px !important;
+      width: 100vw;
+      margin-top: 21px;
     }
     .signInButton{
-      margin-left: 370px;
+      margin-left: -15px;
       margin-top: 10px;
     }
     .navProfile{
@@ -252,8 +260,160 @@ input.searchNav2{
       margin-left: 39%;
       width: 100px;
     }
+    .navbar-nav {
+      height: 105px;
+      margin-left: 63px;
+      width: 100vw;
+      margin-top: 21px;
+    }
+  } */
+
+  @media (min-width : 320px) and (max-width : 414.98px ) {
+    .navbar-toggler{
+      margin-top: -64px !important;
+      margin-left:auto
+    }
     .navbar-nav{
-      height: 230px;
+      margin-top: 10px;
+      height: 95px;
+    }
+
+    input.searchNav2{
+      display: none;
+      visibility: hidden;
+    }
+    .iconSearchNav{
+      display: none;
+      visibility: hidden;
+    }
+  }  
+
+  @media (min-width : 415px) and (max-width : 429.98px ) {
+    .navbar-toggler{
+      margin-top: -64px !important;
+      margin-left: 22rem;
+    }
+    .navbar-nav{
+      margin-top: 10px;
+      height: 95px;
+    }
+
+    input.searchNav2{
+      display: none;
+      visibility: hidden;
+    }
+    .iconSearchNav{
+      display: none;
+      visibility: hidden;
+    }
+  }  
+
+  @media (min-width : 430px) and (max-width : 449.98px ) {
+    .navbar-toggler{
+      margin-top: -64px !important;
+      margin-left: 22rem;
+    }
+    .navbar-nav{
+      margin-top: 10px;
+      height: 95px;
+    }
+
+    input.searchNav2{
+      display: none;
+      visibility: hidden;
+    }
+    .iconSearchNav{
+      display: none;
+      visibility: hidden;
+    }
+  }  
+
+  @media (min-width : 450px) and (max-width : 479px ) {
+    .navbar-toggler{
+      margin-top: -64px !important;
+      margin-left: 23rem;
+    }
+    .navbar-nav{
+      margin-top: 10px;
+      height: 95px;
+    }
+
+    input.searchNav2{
+      display: none;
+      visibility: hidden;
+    }
+    .iconSearchNav{
+      display: none;
+      visibility: hidden;
     }
   }
+
+  @media (min-width : 480px) and (max-width: 487.98px){
+    .navbar-toggler{
+      padding: .25rem 0.5rem !important;
+    }
+    .navbar-nav{
+      margin-top: 10px;
+      height: 95px;
+    }
+    input.searchNav2{
+      display: none;
+      visibility: hidden;
+    }
+    .iconSearchNav{
+      display: none;
+      visibility: hidden;
+    }
+  }
+
+  @media (min-width: 488px) and (max-width: 767.98px) {
+    .navbar-nav{
+      margin-top: 10px;
+    }
+    .signInButton{
+      margin-top: 20px;
+    }
+    .navProfile {
+      margin-top: 7px !important;
+      height: 55px;
+    }
+    input.searchNav2{
+      display: none;
+      visibility: hidden;
+    }
+    .iconSearchNav{
+      display: none;
+      visibility: hidden;
+    }
+  }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .navbar-nav{
+    margin-top: 10px;
+  }
+  .signInButton{
+    margin-top: 20px;
+  }
+  .navProfile {
+    margin-top: 7px !important;
+    height: 55px;
+  }
+  input.searchNav2{
+    padding: 25px 60px !important;
+    margin-left: -210px !important;
+    }
+}
+
+  @media (min-width: 992px) and (max-width: 1199.98px) {
+    .navbar-nav{
+      height: 42px;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    .navbar-nav{
+      height: 40px !important; 
+    }
+  }
+
  
