--- a/src/pages/Create_Event/EventCreate.css
+++ b/src/pages/Create_Event/EventCreate.css
@@ -94,3 +94,19 @@ img.imagePreview{
   text-align:center;
   position:relative;
 } 
+
+@media (min-width : 320px) and (max-width: 575.98px) {
+  .formLength{
+    width: 100% !important;
+  }
+  .createEventCard {
+    width: 40rem;
+    margin: 1rem 1rem 1rem 1rem;
+}
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .formLength{
+    width: 27rem !important;
+  }
+}
