--- a/src/Auth/Login/Login.css
+++ b/src/Auth/Login/Login.css
@@ -116,29 +116,14 @@
 .sign-in-container {
   left: 0;
   width: 50%;
-  z-index: 2;
 }
 
 .sign-up-container {
   left: 0;
   width: 50%;
   opacity: 0;
-  z-index: 1;
 }
 
-@keyframes show {
-  0%,
-  49.99% {
-    opacity: 0;
-    z-index: 1;
-  }
-
-  50%,
-  100% {
-    opacity: 1;
-    z-index: 5;
-  }
-}
 
 .overlay-container {
   position: absolute;
@@ -148,7 +133,6 @@
   height: 100%;
   overflow: hidden;
   transition: transform 0.6s ease-in-out;
-  z-index: 100;
 }
 
 .overlay {
@@ -215,4 +199,22 @@
   margin: 0 5px;
   height: 40px;
   width: 40px;
+}
+@media all and (max-width:400px){
+  .overlay-container-login{
+    visibility: hidden;
+  }
+  .login-form{
+    width: 380px;
+  }
+}
+@media all and (max-width:360px){
+  .login-form{
+    width: 350px;
+  }
+}
+@media all and (max-width:320px){
+  .login-form{
+    width: 310px;
+  }
 }
